--- a/index.html
+++ b/index.html
@@ -123,27 +123,27 @@
         <div class="slider">
           <!-- Slide 1 -->
           <div class="slide relative">
-            <img src="/Lab08/img/slide_1.jpeg" alt="Nature 1" />
+            <img src="img/slide_1.jpeg" alt="Nature 1" />
           </div>
 
           <!-- Slide 2 -->
           <div class="slide relative">
-            <img src="/Lab08/img/slide_2.jpg" alt="Nature 2" />
+            <img src="img/slide_2.jpg" alt="Nature 2" />
           </div>
 
           <!-- Slide 3 -->
           <div class="slide relative">
-            <img src="/Lab08/img/slide_3.jpg" alt="Nature 3" />
+            <img src="img/slide_3.jpg" alt="Nature 3" />
           </div>
 
           <!-- Slide 4 -->
           <div class="slide relative">
-            <img src="/Lab08/img/slide_4.jpg" alt="Nature 4" />
+            <img src="img/slide_4.jpg" alt="Nature 4" />
           </div>
 
           <!-- Slide 5 -->
           <div class="slide relative">
-            <img src="/Lab08/img/slide_5.jpg" alt="Nature 5" />
+            <img src="img/slide_5.jpg" alt="Nature 5" />
           </div>
         </div>
 
